[workspace]
resolver = "3"
members = [
  # "gencam_asi_example",
  "generic_camera",
  "generic_camera_player_one",
  "player_one_camera_sys",
  # "generic_camera_asi",
  "zwo_asi_sys"
]

[workspace.dependencies]
atomic-time = "0.1"
generic-camera = {
  path = "generic_camera",
  version = "0.0.12",
  default-features = false
}
loom = "0.7.2"
refimage = { version = "1.0.0-pre4", default-features = false }
# remember to always pin your git dependencies or else things will break out from under you,
# even if it's your own library.
senti = {
  git = "https://github.com/lilyyy411/senti.git",
  rev = "519fb0bf52b71c7b2e471b78bffcd6b59fc6aee1",
  version = "0.1.0"
}
