[package]
name = "generic-camera"
version = "0.0.12"  # change in readme.md
edition = "2021"
rust-version = "1.68.0"
authors = ["Sunip K. Mukherjee", "Lily Grippo"]
license = "MIT OR Apache-2.0"
keywords = ["api", "camera", "interface"]
readme = "README.MD"
repository = "https://github.com/sunipkm/generic_camera"
homepage = "https://crates.io/crates/generic_camera"
description = """
An efficient and ergonomic interface to capture images using cameras.
"""
exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
documented = "0.6"
rand = { version = "0.8", optional = true }
refimage.workspace = true
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"

[features]
# default features
default = []
dummy = ["dep:rand"]
full = ["dummy", "server"]
server = ["dep:rand"]
