[package]
name = "generic-camera-asi"
version = "0.0.11"
edition = "2024"
rust-version = "1.94.0"
authors = ["Sunip K. Mukherjee"]
license = "MIT OR Apache-2.0"
readme = "README.MD"
repository = "https://github.com/sunipkm/generic-camera"
homepage = "https://crates.io/crates/generic-camera-asi"
keywords = ["api", "asi", "generic-camera", "interface", "zwo"]

description = """
An efficient and ergonomic interface to capture images using cameras.
"""
exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
atomic-time.workspace = true
bytemuck = "1.18"
# generic-camera = { version = ">= 0.0.10", default-features = false }
generic-camera.workspace = true
log = "0.4"
# refimage = { version = ">= 1.0.0-pre", default-features = false }
refimage.workspace = true
zwo_asi_sys = { path = "../zwo_asi_sys/", version = "0.1" }

[features]
default = []
